Errors thrown by read_homefile api function #78601

Closed
opened 2020-07-04 14:31:17 +02:00 by Michael Schnabel · 29 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1050 TI MaxQ

Blender Version
Broken: 2.83, 2.83.1, -cad98923d006-
Worked: 2.82

There are errors shown in the system console when running the python command: 'bpy.ops.wm.read_homefile(use_empty=True)'
This might not seem big of an issue, but when running unittests for a plugin that gunks up the test output and makes spotting issues very hard.

image.png

Exact steps for others to reproduce the error
Simply run the following commands by loading the attached script file in blender:
(no .blend file needed, this error occurs in a clean blender environment)

import bpy
bpy.ops.wm.read_homefile(use_empty=True)

script.py

**System Information** Operating system: Windows 10 Graphics card: GTX 1050 TI MaxQ **Blender Version** Broken: 2.83, 2.83.1, -cad98923d006- Worked: 2.82 There are errors shown in the system console when running the python command: 'bpy.ops.wm.read_homefile(use_empty=True)' This might not seem big of an issue, but when running unittests for a plugin that gunks up the test output and makes spotting issues very hard. ![image.png](https://archive.blender.org/developer/F8663854/image.png) **Exact steps for others to reproduce the error** Simply run the following commands by loading the attached script file in blender: (no .blend file needed, this error occurs in a clean blender environment) ``` import bpy bpy.ops.wm.read_homefile(use_empty=True) ``` [script.py](https://archive.blender.org/developer/F8748825/script.py)

Added subscriber: @Tarcontar

Added subscriber: @Tarcontar
Michael Schnabel changed title from Errors thrown by reading homefile api function to Errors thrown by read_homefile api function 2020-07-05 00:08:08 +02:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can't reproduce this issue.

Can you verify this happens with stock build/install of Blender?

I can't reproduce this issue. Can you verify this happens with stock build/install of Blender?

Hi,

just checked again:
2.82 stock -> no issues
2.83 stock -> issue
2.83.1 stock -> issue
2.90 -> issue
image.png

The script runs, the view layout is set back to the standard view after opening blender, but the system console contains the mentioned errors.

Hi, just checked again: 2.82 stock -> no issues 2.83 stock -> issue 2.83.1 stock -> issue 2.90 -> issue ![image.png](https://archive.blender.org/developer/F8677701/image.png) The script runs, the view layout is set back to the standard view after opening blender, but the system console contains the mentioned errors.

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Hi,

any updates on this issue?

Regards
Tarcontar

Hi, any updates on this issue? Regards Tarcontar

We need developer to reproduce this issue. I can't really pass this to anybody since I have no idea what causes this on your setup but not mine. I guess I could have added a project so there is higher chance this will be looked at by somebody who knows what could go on here.

We need developer to reproduce this issue. I can't really pass this to anybody since I have no idea what causes this on your setup but not mine. I guess I could have added a project so there is higher chance this will be looked at by somebody who knows what could go on here.

My github project team member also gets these errors on his system and even our travis CI build shows them:
https://travis-ci.org/github/OpenSAGE/OpenSAGE.BlenderPlugin/jobs/710085672

My github project team member also gets these errors on his system and even our travis CI build shows them: https://travis-ci.org/github/OpenSAGE/OpenSAGE.BlenderPlugin/jobs/710085672

Added subscriber: @mont29

Added subscriber: @mont29

Does this happen if you start blender with --factory-startup ?

Does this happen if you start blender with `--factory-startup` ?

Hi,

we already start it with --factory-startup, but they also show if I remove that.

Hi, we already start it with --factory-startup, but they also show if I remove that.

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Cannot reproduce that here, further more there is no Dots Stroke material in factory startup blender, so... think we'll need more info here.

Cannot reproduce that here, further more there is no `Dots Stroke` material in factory startup blender, so... think we'll need more info here.

Added subscriber: @feliwir

Added subscriber: @feliwir

Hello,
I'm the fellow programmer of @Tarcontar and i get the issues aswell on Linux & Windows.
Our travis CI does a fresh install of Blender before running the tests, so the issue is not related to some customized settings in my opinion.

Hello, I'm the fellow programmer of @Tarcontar and i get the issues aswell on Linux & Windows. Our travis CI does a fresh install of Blender before running the tests, so the issue is not related to some customized settings in my opinion.

Yes, but what is your tools doing before calling this function? This error means that some data-blocks has invalid user count, so need to know how/what happens.

Yes, but what is your tools doing **before** calling this function? This error means that some data-blocks has invalid user count, so need to know how/what happens.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Please include a blend file and simple script to redo this issue.

Please include a blend file and simple script to redo this issue.

Hi,
i attached a script.py file above, a .blend is not needed, since this works with a clean blender environment.
Simply open blender, load the script, run it and view the console.

Hi, i attached a script.py file above, a .blend is not needed, since this works with a clean blender environment. Simply open blender, load the script, run it and view the console.

Tested with 2.90 branch:

  • blender --factory-startup
  • Switch to a text editor and open script.py
  • Run script.py.
  • A new file is made, as expected.

There are no errors in the console.

Please test these steps to let us know if they work for you or not.

Tested with 2.90 branch: - `blender --factory-startup` - Switch to a text editor and open `script.py` - Run `script.py`. - A new file is made, as expected. There are no errors in the console. Please test these steps to let us know if they work for you or not.

just tested again with current 2.90 beta:
image.png

and 2.91.0 alpha:
image.png

both tested with and without '--factory-startup'

here is a problem-step-recorder record, maybe that helps:
steps to reproduce.zip

just tested again with current 2.90 beta: ![image.png](https://archive.blender.org/developer/F8751249/image.png) and 2.91.0 alpha: ![image.png](https://archive.blender.org/developer/F8751252/image.png) both tested with and without '--factory-startup' here is a problem-step-recorder record, maybe that helps: [steps to reproduce.zip](https://archive.blender.org/developer/F8751256/steps_to_reproduce.zip)

I can confirm that this is still happening

I can confirm that this is still happening

Tested it on another pc (no blender ever installed) with blender 2.83.4 portable and also got the errors in console.

Tested it on another pc (no blender ever installed) with blender 2.83.4 portable and also got the errors in console.

Still cannot reproduce... Note that those 'steps to reproduce' are kinda useless for us, being on linux...

Still cannot reproduce... Note that those 'steps to reproduce' are kinda useless for us, being on linux...

I can redo this error in blender-v2.83-release branch (04345dcf897c9404a16588a6bc0f99e26ec39df2).

But not in blender-v2.90-release (c5519d4b6f7f83bd8dab8491b8615512b65686ac).

So as far as I can tell this has been fixed, although it's not impossible the issue somehow still exists on windows.

I can redo this error in `blender-v2.83-release` branch (`04345dcf897c9404a16588a6bc0f99e26ec39df2`). But not in `blender-v2.90-release` (`c5519d4b6f7f83bd8dab8491b8615512b65686ac`). So as far as I can tell this has been fixed, although it's not impossible the issue somehow still exists on windows.

This issue was referenced by 76f513f6dc

This issue was referenced by 76f513f6dcc352c62944858123d91dc393a55650

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-01 07:30:22 +02:00

The issue still persists for me on latest 2.90 release (Windows) and also on our travis pipeline (Linux).

See: https://travis-ci.org/github/OpenSAGE/OpenSAGE.BlenderPlugin/jobs/723174394

The issue still persists for me on latest 2.90 release (Windows) and also on our travis pipeline (Linux). See: https://travis-ci.org/github/OpenSAGE/OpenSAGE.BlenderPlugin/jobs/723174394
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78601
No description provided.